fix table white space right padding

--- a/stylesheets/table.css
+++ b/stylesheets/table.css
@@ -33,3 +33,7 @@ th {
   background-color: white;
   z-index: 10;
 }
+
+table {
+  border-collapse: separate;
+}
